--- a/acessibilidade.html
+++ b/acessibilidade.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html lang="en"
-     >
+<html lang="en">
 <head>
 <meta charset="utf-8" />
 
@@ -803,3 +802,4 @@ function filtrarCursos() {
 
 
 </html>
+
